syntax.py
import keywords
import semantics

#note: 
#VARIABLE ASSIGNMENT USING R = wala pang syntax para sa expression
varidents = {}
def isfloat(num):
    try:
        float(num)
        return True
    except ValueError:
        return False

def getVaridents(text):
    syntax(text)
    # print(varidents, "syntax")
    return varidents

#this part will be repsonsible for analyzing the operations 
def arithmeticSyntax(h,arithmetic, lexeme):
    # print(varidents)
    tempResult = ''
    success = 1
    result = []
    #arithmetic counter  for indexing
    an_counter = 0
    operation_counter = 0
    arithmetic_index = 0
    if lexeme[0][0] in arithmetic: 
        if len(lexeme) < 4:
            success = 0
            tempResult+= (f'\n>> SyntaxError in line {h+1} near <{lexeme[0][0]}>: \n\tIncorrect number of parameters, see correct syntax. \n\t{lexeme[0][0]} <x> AN <y>')
            #break
        else:
            #loop para macater yung more than 1 operations
            # print(f"lexeme: {lexeme}")
            while arithmetic_index < len(lexeme):
                # print(f"arithmetic index : {arithmetic_index}")
                # print(f"len(lexeme)-1 = {len(lexeme)} ")
                #this is for hahving another 
                if lexeme[arithmetic_index][1] == 'Arithmetic Operation':
                    #mag add lang siya ng index 
                    arithmetic_index += 1
                    operation_counter += 1
                # this one if may AN !!
                elif lexeme[arithmetic_index][1] == "Parameter Delimiter":
                    #before ng "AN"
                    an_counter += 1
                    if lexeme[arithmetic_index-1][1] != "NUMBR Literal":
                        if lexeme[arithmetic_index-1][1] != "NUMBAR Literal":
                            if lexeme[arithmetic_index-1][1] != "TROOF Literal":
                                if lexeme[arithmetic_index-1][1] == "Identifier":
                                    # print(f"varidents: {varidents}")
                                    if lexeme[arithmetic_index-1][0] not in varidents:
                                        tempResult += (f'\n>> SyntaxError in line {h+1} near <{lexeme[arithmetic_index][0]}>: \n\t Variable is not existing')
                                        success = 0
                                        break
                                    else:
                                        #converted to string muna para macheck if ang laman ay numeric or not ba :> Since ang function na ito ay limited to strings only
                                        #GIVING CONSIDERATION TO NOOB
                                        if varidents[lexeme[arithmetic_index-1][0]] != "NOOB":
                                            if str(varidents[lexeme[arithmetic_index-1][0]]).isnumeric() == False:
                                                print(f"varidents[lexeme[arithmetic_index-1][0]]: {varidents[lexeme[arithmetic_index-1][0]]}")
                                                try:
                                                    float_val = float(varidents[lexeme[arithmetic_index-1][0]])
                                                except ValueError:
                                                    tempResult += (f'\n>> SyntaxError in line {h+1} near <{lexeme[arithmetic_index][0]}>: \n\t Variable value should be numeric only')
                                                    success = 0
                                                    break                                                         
                                elif lexeme[arithmetic_index-1][1] != "String Delimiter":
                                    tempResult += (f'\n>> SyntaxError in line {h+1} near <{lexeme[arithmetic_index][0]}>: \n\tIncorrect syntax, see correct syntax. \n\t{lexeme[0][0]} <x> AN <y> where <x> and <y> are either NUMBR, NUMBAR,YARN, TROOF, and Variables only')
                                    success = 0
                                    break
                    #after ng "AN"
                    if lexeme[arithmetic_index+1][1] != "NUMBR Literal":
                        if lexeme[arithmetic_index+1][1] != "NUMBAR Literal":
                            if lexeme[arithmetic_index+1][1] != "TROOF Literal":
                                if lexeme[arithmetic_index+1][1] == "Identifier":
                                    # print(f"varidents: {varidents}")
                                    if lexeme[arithmetic_index+1][0] not in varidents:
                                        tempResult += (f'\n>> SyntaxError in line {h+1} near <{lexeme[arithmetic_index][0]}>: \n\t Variable is not existing')
                                        success = 0
                                        break
                                    else:
                                        #converted to string muna para macheck if ang laman ay numeric or not ba :> Since ang function na ito ay limited to strings only
                                        #considering noob
                                        if varidents[lexeme[arithmetic_index+1][0]] != "NOOB":
                                            if str(varidents[lexeme[arithmetic_index+1][0]]).isnumeric() == False:
                                                print(f"varidents[lexeme[arithmetic_index+1][0]]: {varidents[lexeme[arithmetic_index+1][0]]}")
                                                try:
                                                    float_val = float(varidents[lexeme[arithmetic_index+1][0]])
                                                except ValueError:
                                                    tempResult += (f'\n>> SyntaxError in line {h+1} near <{lexeme[arithmetic_index][0]}>: \n\t Variable value should be numeric only')
                                                    success = 0
                                                    break  
                                elif lexeme[arithmetic_index+1][1] != 'String Delimiter':
                                    if lexeme[arithmetic_index+1][1] != 'Arithmetic Operation':
                                        tempResult += (f'\n>> SyntaxError in line {h+1} near <{lexeme[arithmetic_index][0]}>: \n\tIncorrect syntax, see correct syntax. \n\t{lexeme[0][0]} <x> AN <y> where <x> and <y> are either NUMBR, NUMBAR, YARN, and Variables only')
                                        success = 0
                                        break                                    
                    arithmetic_index +=1
                    
                #this is for catering the operands!!
                else:
                    #proceed to if else ganern!!  
                    if lexeme[arithmetic_index][1] != "NUMBR Literal":
                        if lexeme[arithmetic_index][1] != "NUMBAR Literal":
                            if lexeme[arithmetic_index][1] != "TROOF Literal":
                                if lexeme[arithmetic_index][1] == "Identifier":
                                    # print(f"varidents: {varidents}")
                                    if lexeme[arithmetic_index][0] not in varidents:
                                        tempResult += (f'\n>> SyntaxError in line {h+1} near <{lexeme[arithmetic_index][0]}>: \n\t Variable is not existing')
                                        success = 0
                                        break
                                    else:
                                        #converted to string muna para macheck if ang laman ay numeric or not ba :> Since ang function na ito ay limited to strings only
                                        #considering noob
                                        if varidents[lexeme[arithmetic_index][0]] != "NOOB":
                                            if str(varidents[lexeme[arithmetic_index][0]]).isnumeric() == False:
                                                print(f"varidents[lexeme[arithmetic_index][0]]: {varidents[lexeme[arithmetic_index][0]]}")
                                                try:
                                                    float_val = float(varidents[lexeme[arithmetic_index][0]])
                                                    arithmetic_index +=1  #added this para di magkaroon ng inifnity loop
                                                except ValueError:
                                                    tempResult += (f'\n>> SyntaxError in line {h+1} near <{lexeme[arithmetic_index][0]}>: \n\t Variable value should be numeric only')
                                                    success = 0
                                                    break
                                            else:
                                                arithmetic_index +=1  
                                        else:
                                            arithmetic_index+=1                                                 
                                elif lexeme[arithmetic_index][1] != "String Delimiter":
                                    tempResult += (f'\n>> SyntaxError in line {h+1} near <{lexeme[arithmetic_index][0]}>: \n\t{lexeme[0][0]} only accepts NUMBR, NUMBAR,TROOF, YARN and Variables!')
                                    success = 0
                                    break
                                #if yarn nga siya
                                else:
                                    if lexeme[arithmetic_index+1][0].isnumeric() == False:
                                        tempResult += (f'\n>> SyntaxError in line {h+1} near <{lexeme[arithmetic_index][0]}>: \n\tYARN is not a NUMBR or NUMBAR!')
                                        success = 0
                                        break
                                    if lexeme[arithmetic_index+2][1] != "String Delimiter":
                                        tempResult += (f'\n>> SyntaxError in line {h+1} near <{lexeme[arithmetic_index][0]}>: \n\tYARN should start and end with " "')
                                        success = 0
                                        break                                                                                                        
                                    arithmetic_index += 3
                            else:
                                arithmetic_index+=1
                        else:
                            arithmetic_index +=1
                    else:
                        arithmetic_index +=1
            if an_counter != operation_counter and success != 0:
                # print(f"arithmetic_index: {arithmetic_index}")
                tempResult += (f'\n>> SyntaxError in line {h+1} near <{lexeme[0][0]}>: \n\tTotal no. of {lexeme[0][0]} should be equal to AN')
                success = 0
                
        result.append(success)
        result.append(tempResult)
        return result

#parameters: lexeme - ang ipapasa here is from the lexeme with index kung saan nagstart 'yung both saem of diffrint up 
    #hanggang sa end ng format lang ng both saem or diffrint so either lexeme[i:i+4] or lexeme[i:i+7] kapag may biggr of | smallr of
def comparisonSyntax(lexeme, h, i):
        # comparison = ["BOTH SAEM", "DIFFRINT"]
        comparison_index = 0
        check = 0
        # print(lexeme[comparison_index][0])
        # print(len(lexeme))
    # while comparison_index < len(lexeme):
    #     print(varidents)
        if isfloat(lexeme[comparison_index+1][0]) == False:
            if lexeme[comparison_index+1][0] not in varidents:
                success =0
                check = 1
                return(f'\n>> SyntaxError in line {h+1} near <{lexeme[comparison_index][0]}>: \n\t{lexeme[comparison_index][0]} only accepts NUMBR or NUMBAR type')
            else:
                # print(isfloat(varidents[lexeme[comparison_index+1][0]]))
                if isfloat(varidents[lexeme[comparison_index+1][0]]) == False:
                    success =0
                    check = 1
                    return(f'\n>> SyntaxError in line {h+1} near <{lexeme[comparison_index][0]}>: \n\t{lexeme[comparison_index][0]} only accepts NUMBR or NUMBAR type variable')

        if len(lexeme) == 4:
            if lexeme[comparison_index+2][0] != 'AN':
                success =0
                check = 1
                return(f"\n>> SyntaxError in line {h+1} near <{lexeme[comparison_index][0]}>: \n\t{lexeme[comparison_index+2][0]} is recognized incorrectly. Perhaps you need an 'AN' keyword?")
            elif isfloat(lexeme[comparison_index+3][0]) == False:
                if lexeme[comparison_index+3][0] not in varidents:
                    success =0
                    check = 1
                    return(f'\n>> SyntaxError in line {h+1} near <{lexeme[comparison_index][0]}>: \n\t{lexeme[comparison_index][0]} only accepts NUMBR or NUMBAR type')
                else:
                # print(isfloat(varidents[lexeme[comparison_index+1][0]]))
                    if isfloat(varidents[lexeme[comparison_index+3][0]]) == False:
                        success =0
                        check = 1
                        return(f'\n>> SyntaxError in line {h+1} near <{lexeme[comparison_index][0]}>: \n\t{lexeme[comparison_index][0]} only accepts NUMBR or NUMBAR type variable')
        elif len(lexeme) == 7:
            if lexeme[comparison_index+2][0] != 'AN':
                success =0
                check = 1
                return(f"\n>> SyntaxError in line {h+1} near <{lexeme[comparison_index][0]}>: \n\t{lexeme[comparison_index+2][0]} is recognized incorrectly. Perhaps you need an 'AN' keyword?")
            elif lexeme[comparison_index+3][0] != 'SMALLR OF' and lexeme[comparison_index+3][0] != 'BIGGR OF':
                success =0
                check = 1
                return(f"\n>> SyntaxError in line {h+1} near <{lexeme[comparison_index+2][0]}>: \n\t{lexeme[comparison_index+3][0]} is recognized incorrectly. Perhaps you need a 'SMALLR OF' or 'BIGGR OF' keyword?")
            elif isfloat(lexeme[comparison_index+4][0]) == False and lexeme[comparison_index+4][0] != lexeme[comparison_index+1][0]:
                success =0
                check = 1
                return(f'\n>> SyntaxError in line {h+1} near <{lexeme[comparison_index][0]}>: \n\t{lexeme[comparison_index][0]} SMALLR OF and BIGGR OF only accepts NUMBR or NUMBAR type')
            elif lexeme[comparison_index+5][0] != 'AN':
                success =0
                check = 1
                return(f"\n>> SyntaxError in line {h+1} near <{lexeme[comparison_index+4][0]}>: \n\t{lexeme[i+5][0]} is recognized incorrectly. Perhaps you need an 'AN' keyword?")
            elif isfloat(lexeme[comparison_index+6][0]) == False:
                if lexeme[comparison_index+6][0] not in varidents:
                    success =0
                    check = 1
                    return(f'\n>> SyntaxError in line {h+1} near <{lexeme[comparison_index][0]}>: \n\t{lexeme[comparison_index][0]} only accepts NUMBR or NUMBAR type')
                else:
                # print(isfloat(varidents[lexeme[comparison_index+1][0]]))
                    if isfloat(varidents[lexeme[comparison_index+6][0]]) == False:
                        success =0
                        check = 1
                        return(f'\n>> SyntaxError in line {h+1} near <{lexeme[comparison_index][0]}>: \n\t{lexeme[comparison_index][0]} only accepts NUMBR or NUMBAR type variable')
        else:
            success =   0
            check = 1
            return(f'\n>> SyntaxError in line {h+1} near <{lexeme[comparison_index][0]}>: \n\tIncorrect number of parameters, see correct syntax. \n\t{lexeme[comparison_index][0]}<value> [[AN BIGGR OF|SMALLR OF] <value>] AN <value>')

        if check == 0:
            return None
        



def booleanSyntax(lexeme, h, i):
    booleans = ['BOTH OF', 'EITHER OF', 'WON OF', 'NOT']
    literals = ['NUMBR Literal', 'NUMBAR Literal', 'YARN Literal', 'TROOF Literal', 'Type Literal']
    boolean_index = 0
    standby_index = []   # para malaman kung may keyword na need pa ng AN na keyword pag nagnesting
    isComplete = 0 # para malaman if complete na yung operands ng finite boolean, para marestrict na 2 operands lang kahit may nesting
    remaining_keywords = len(lexeme)
    while True:
        if boolean_index < len(lexeme):
            if lexeme[boolean_index][0] not in booleans and lexeme[boolean_index][0] not in varidents and lexeme[boolean_index][1] not in literals:
                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>: \n\t{lexeme[boolean_index][0]} is not a finite boolean keyword.')
            else:
                if lexeme[boolean_index][0] in ["BOTH OF", "EITHER OF", "WON OF"] and isComplete == 0:
                    if remaining_keywords >= 4:
                        if lexeme[boolean_index+1][0] not in booleans:
                            if lexeme[boolean_index+1][0] != 'WIN':
                                if lexeme[boolean_index+1][0] != 'FAIL':
                                    if lexeme[boolean_index+1][1] not in literals and lexeme[boolean_index+1][0] not in varidents:
                                        return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\tOperands of {lexeme[boolean_index][0]} must be either WIN OR FAIL.')
                                        
                            elif lexeme[boolean_index+1][0] != 'FAIL':
                                if lexeme[boolean_index+1][0] != 'WIN':
                                    if lexeme[boolean_index+1][1] not in literals and lexeme[boolean_index+1][0] not in varidents:
                                        return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\tOperands of {lexeme[boolean_index][0]} must be either WIN OR FAIL.')
                                        

                        else:
                            standby_index.append(boolean_index)
                            standby_index.append(boolean_index+1)
                            boolean_index += 1
                            remaining_keywords -= 1
                            continue

                        if lexeme[boolean_index+2][0] != 'AN':
                            
                            return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\tThere is a need for AN to indicate "and".')
                            

                        if lexeme[boolean_index+3][0] not in booleans:
                            if lexeme[boolean_index+3][0] != 'WIN':
                                if lexeme[boolean_index+3][0] != 'FAIL':
                                    if lexeme[boolean_index+3][1] not in literals and ((standby_index == -1 and lexeme[boolean_index+3][0] == 'AN') or lexeme[boolean_index+3][0] not in varidents):
                                        return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\t Operands of {lexeme[boolean_index][0]} must be either WIN OR FAIL.')
                                        
                            elif lexeme[boolean_index+3][0] != 'FAIL':
                                if lexeme[boolean_index+3][0] != 'WIN':
                                    if lexeme[boolean_index+3][1] not in literals and ((standby_index == -1 and lexeme[boolean_index+3][0] == 'AN') or lexeme[boolean_index+3][0] not in varidents):
                                        return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\t Operands of {lexeme[boolean_index][0]} must be either WIN OR FAIL.')
                                        
                        else:
                            boolean_index += 3
                            remaining_keywords -= 3
                            continue

                        if ((boolean_index+4) < len(lexeme)):
                            if len(standby_index) != 0 and lexeme[boolean_index+4][0] == 'AN':
                                temp = standby_index.pop()
                                if temp == 0:
                                    isComplete = 1
                            if lexeme[boolean_index+4][0] != 'AN' and boolean_index+4 != len(lexeme)-1:
                                
                                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>: \n\t{lexeme[boolean_index+4][0]} is recognized incorrectly. Perhaps you need an "AN" keyword?')
                                
                            elif boolean_index+4 == len(lexeme)-1:
                                
                                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>:\n\tIncorrect number of parameters, see correct syntax. \n\t{lexeme[boolean_index][0]} [WIN|FAIL] AN [WIN|FAIL]')
                        
                        if len(standby_index) == 0:
                            isComplete = 1       
                        boolean_index += 5
                        remaining_keywords -= 5
                    else:
                        
                        return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>\n\tIncorrect number of parameters, see correct syntax. \n\t{lexeme[boolean_index][0]} [WIN|FAIL] AN [WIN|FAIL]')
                        
                elif lexeme[boolean_index][0] == "NOT" and isComplete == 0:
                    if remaining_keywords >= 2:
                        if lexeme[boolean_index+1][0] not in booleans:
                            if lexeme[boolean_index+1][0] != 'WIN':
                                if lexeme[boolean_index+1][0] != 'FAIL':
                                    if lexeme[boolean_index+1][1] not in literals and (lexeme[boolean_index+1][0] not in varidents):
                                        
                                        return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\tOperands of NOT must be either WIN OR FAIL.')
                                        
                            elif lexeme[boolean_index+1][0] != 'FAIL':
                                if lexeme[boolean_index+1][0] != 'WIN':
                                    if lexeme[boolean_index+1][1] not in literals and (lexeme[boolean_index+1][0] not in varidents):
                                        
                                        return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\tOperands of NOT must be either WIN OR FAIL.')
                                        
                        else:
                            boolean_index += 1
                            remaining_keywords -= 1
                            continue

                        if isComplete == 0:
                            if len(standby_index) != 0:
                                standby_index.pop()
                            if len(standby_index) == 0:
                                isComplete = 1

                        if ((boolean_index+2) < len(lexeme)):
                            if lexeme[boolean_index+2][0] != 'AN' and boolean_index+2 != len(lexeme)-1:
                                
                                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>: \n\t{lexeme[boolean_index+2][0]} is recognized incorrectly. Perhaps you need an "AN" keyword?')
                                
                            elif boolean_index+2 == len(lexeme)-1:
                                
                                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>:\n\tIncorrect number of parameters, see correct syntax. \n\t{lexeme[boolean_index][0]} [WIN|FAIL] AN [WIN|FAIL]')
                                
                        boolean_index += 3
                        remaining_keywords -= 3
                    else:
                        
                        return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>\n\tIncorrect number of parameters, see correct syntax. \n\t{lexeme[boolean_index][0]} [WIN|FAIL] AN [WIN|FAIL]')
                        
                elif (lexeme[boolean_index][0] in varidents or lexeme[boolean_index][1] in literals) and len(standby_index) != 0:
                    if lexeme[boolean_index][0] in varidents or lexeme[boolean_index][1] in literals:
                        boolean_index += 1
                        temp = standby_index.pop()
                        if temp == 0:
                            isComplete = 1
                    else:
                        return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\tIncorrect number of parameters, see correct syntax. \n\t{lexeme[boolean_index][0]} [WIN|FAIL] AN [WIN|FAIL]')
                else:
                    # print(lexeme[boolean_index][0])
                    return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>\n\tIncorrect format, see correct syntax. \n\t{lexeme[i][0]} [WIN|FAIL] AN [WIN|FAIL]')
        else:
            if len(standby_index) != 0:
                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>\n\tIncorrect format, see correct syntax. \n\t{lexeme[i][0]} [WIN|FAIL] AN [WIN|FAIL]')
            return None        

def infiniteBooleanSyntax(lexeme, h, i):
    boolean_index = 1
    literals = ['NUMBR Literal', 'NUMBAR Literal', 'YARN Literal', 'TROOF Literal', 'Type Literal']
    booleans = ['BOTH OF', 'EITHER OF', 'WON OF', 'NOT']
    standby_index = []   # para malaman kung may keyword na need pa ng AN na keyword pag nagnesting
    if len(lexeme) < 5:
        
        return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>: \n\tIncorrect number of parameters, see correct syntax. \n\t{lexeme[boolean_index][0]} <finite_bool_expr> AN <finite_bool_expr> [[AN <finite_bool_expr>...] MKAY')
    while boolean_index <= len(lexeme)-2:
        if lexeme[boolean_index][0] not in booleans and lexeme[boolean_index][0] not in varidents and lexeme[boolean_index][1] not in literals:
            if lexeme[boolean_index][0] not in varidents:
                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>: \n\t{lexeme[boolean_index][0]} is not a declared variable.')
            else:
                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>: \n\t{lexeme[boolean_index][0]} is not a finite boolean keyword.')
            
        else:
            if lexeme[boolean_index][0] in ["BOTH OF", "EITHER OF", "WON OF"]:
                if lexeme[boolean_index+1][0] not in booleans:
                    if lexeme[boolean_index+1][0] != 'WIN':
                        if lexeme[boolean_index+1][0] != 'FAIL':
                            if lexeme[boolean_index+1][1] not in literals and lexeme[boolean_index+1][0] not in varidents:
                                
                                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\tOperands of {lexeme[boolean_index][0]} must be either WIN OR FAIL.')
                                
                    elif lexeme[boolean_index+1][0] != 'FAIL':
                        if lexeme[boolean_index+1][0] != 'WIN':
                            if lexeme[boolean_index+1][1] not in literals and lexeme[boolean_index+1][0] not in varidents:
                                
                                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\tOperands of {lexeme[boolean_index][0]} must be either WIN OR FAIL.')
                                
                else:
                    standby_index.append(boolean_index)
                    standby_index.append(boolean_index+1)
                    boolean_index += 1
                    continue

                if lexeme[boolean_index+2][0] != 'AN':
                    
                    return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\tThere is a need for AN to indicate "and".')
                    
                if lexeme[boolean_index+3][0] not in booleans:
                    if lexeme[boolean_index+3][0] != 'WIN':
                        if lexeme[boolean_index+3][0] != 'FAIL':
                            if lexeme[boolean_index+3][1] not in literals and ((standby_index == 0 and lexeme[boolean_index+3][0] == 'AN') or lexeme[boolean_index+3][0] not in varidents):
                                
                                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\t Operands of {lexeme[boolean_index][0]} must be either WIN OR FAIL.')
                                
                    elif lexeme[boolean_index+3][0] != 'FAIL':
                        if lexeme[boolean_index+3][0] != 'WIN':
                            if lexeme[boolean_index+3][1] not in literals and ((standby_index == 0 and lexeme[boolean_index+3][0] == 'AN') or lexeme[boolean_index+3][0] not in varidents):
                                
                                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\t Operands of {lexeme[boolean_index][0]} must be either WIN OR FAIL.')
                                
                else:
                    boolean_index += 3
                    continue

                if ((boolean_index+4) < len(lexeme)):
                    if len(standby_index) != 0 and lexeme[boolean_index+4][0] == 'AN':
                        standby_index.pop()
                    if lexeme[boolean_index+4][0] != 'AN' and (lexeme[boolean_index+4][0] != 'MKAY' and boolean_index+4 != len(lexeme)-1):
                        
                        return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>: \n\t{lexeme[boolean_index+4][0]} is recognized incorrectly. Perhaps you need an "AN" keyword?')
                        
                    elif lexeme[boolean_index+4][0] == 'AN' and lexeme[boolean_index+5][0] == 'MKAY':
                        
                        return (f'\n>> SyntaxError in line {h+1} near <{lexeme[i][0]}>:\n\tIncorrect number of parameters, see correct syntax. \n\t {lexeme[boolean_index][0]} [WIN|FAIL] AN [WIN|FAIL]')
                        
                boolean_index += 5
            elif lexeme[boolean_index][0] == "NOT":
                if lexeme[boolean_index+1][0] not in booleans:
                    if lexeme[boolean_index+1][0] != 'WIN':
                        if lexeme[boolean_index+1][0] != 'FAIL':
                            if lexeme[boolean_index+1][1] not in literals and lexeme[boolean_index+1][0] not in varidents:
                                
                                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\tOperands of NOT must be either WIN OR FAIL.')
                                
                    elif lexeme[boolean_index+1][0] != 'FAIL':
                        if lexeme[boolean_index+1][0] != 'WIN':
                            if lexeme[boolean_index+1][1] not in literals and lexeme[boolean_index+1][0] not in varidents:
                                
                                return (f'\n>> SyntaxError in line {h+1} near <{lexeme[boolean_index][0]}>: \n\tOperands of NOT must be either WIN OR FAIL.')
                                
                else:
                    boolean_index += 1
                    continue

                if len(standby_index) != 0:
                    standby_index.pop()
